Fixed navbar animation on home

--- a/main.html
+++ b/main.html
@@ -24,9 +24,21 @@
             <h1 id="hello">hello</h1>
         </div>
     </div>
-    <div class="about" id="mabout">
-        <h1>about</h1>
-    </div>
+    <section id="mabout">
+        <div class="sections">
+            <h1>about</h1>
+        </div>
+    </section>
+    <section id="mworks">
+        <div class="sections">
+            <h1>works</h1>
+        </div>
+    </section>
+    <section id="mcontact">
+        <div class="sections">
+            <h1>contact</h1>
+        </div>
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
