--- a/main.html
+++ b/main.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,800&display=swap" rel="stylesheet">
-    <title>BIANCA</title>
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
+    <title>BIANCA | A Portfolio Website</title>
 </head>
 <body>
     <div id="navbar">
-        <a id="home" href="#mhome"><img src="./images/bcm-logo.png"></a>
-        <a class="link" id="link2" href="#mabout">ABOUT</a>
-        <a class="link" id="link3" href="#mworks">WORKS</a>
-        <a class="link" id="link4" href="#mcontact">CONTACT</a>
+        <a id="link1" href="#mhome"><img src="./images/bcm-logo.png"></a>
+        <a class="links" id="link2" href="#mabout">ABOUT</a>
+        <a class="links" id="link3" href="#mworks">WORKS</a>
+        <a class="links" id="link4" href="#mcontact">CONTACT</a>
     </div>
-    <div class="home" id="mhome">
+    <div id="mhome">
         <div class="left">
             <img id="logo" src="./images/bcm-logo2.png">
         </div>
@@ -24,21 +24,27 @@
             <h1 id="hello">hello</h1>
         </div>
     </div>
-    <section id="mabout">
-        <div class="sections">
-            <h1>about</h1>
+    <div class="sections" id="mabout">
+        <div class="left">
+            <div class="text">
+                    <h4>my name is</h4>
+                    <h2>Bianca</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius animi unde est. Molestiae sint ducimus laborum, dolorum
+                        cumque reiciendis corrupti dolor quibusdam consectetur placeat, facilis quidem perspiciatis vero sapiente
+                        voluptatum.
+                    </p>
+            </div>
         </div>
-    </section>
-    <section id="mworks">
-        <div class="sections">
-            <h1>works</h1>
+        <div class="right">
+            <img src="./images/prof.jpg">
         </div>
-    </section>
-    <section id="mcontact">
-        <div class="sections">
-            <h1>contact</h1>
-        </div>
-    </section>
+    </div>
+    <div class="sections" id="mworks">
+        <h1>works</h1>
+    </div>
+    <div class="sections" id="mcontact">
+        <h1>contact</h1>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
