Fixed label to bottom

--- a/main.html
+++ b/main.html
@@ -7,16 +7,17 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
     <title>BIANCA | A Portfolio Website</title>
 </head>
 <body>
     <div id="navbar">
-        <a id="link1" href="#mhome"><img src="./images/bcm-logo.png"></a>
-        <a class="links" id="link2" href="#mabout">ABOUT</a>
-        <a class="links" id="link3" href="#mworks">WORKS</a>
-        <a class="links" id="link4" href="#mcontact">CONTACT</a>
+        <a id="link1" href="#lhome"><img src="./images/bcm-logo.png"></a>
+        <a class="links" id="link2" href="#labout">ABOUT</a>
+        <a class="links" id="link3" href="#lworks">WORKS</a>
+        <a class="links" id="link4" href="#lcontact">CONTACT</a>
     </div>
-    <div id="mhome">
+    <div id="shome">
         <div class="left">
             <img id="logo" src="./images/bcm-logo2.png">
         </div>
@@ -24,7 +25,11 @@
             <h1 id="hello">hello</h1>
         </div>
     </div>
-    <div class="sections" id="mabout">
+    <div class="label" id="labout">
+        <!-- <br><br><br><br><br> -->
+        <h1>about</h1>
+    </div>
+    <div class="sections" id="sabout">
         <div class="left">
             <div class="text">
                     <h4>my name is</h4>
@@ -36,14 +41,33 @@
             </div>
         </div>
         <div class="right">
-            <img src="./images/prof.jpg">
+            <img id="aboutpic" src="./images/prof.jpg">
         </div>
     </div>
-    <div class="sections" id="mworks">
+    <div class="label" id="lworks">
+        <!-- <br><br><br><br><br> -->
         <h1>works</h1>
     </div>
-    <div class="sections" id="mcontact">
+    <div class="sections" id="sworks">
+        <h2>content</h2>
+    </div>
+    <div class="label" id="lcontact">
+        <!-- <br><br><br><br><br> -->
         <h1>contact</h1>
+    </div>
+    <div class="sections" id="scontact">
+        <div class="left">
+            <div class="socials">
+                <a href="#facebook"><img src="./images/sicon-fb.png"></a><a href="#instagram"><img
+                        src="./images/sicon-ig.png"></a><a href="#youtube"><img src="./images/sicon-yt.png"></a><a
+                    href="#linkedin"><img src="./images/sicon-in.png"></a>
+            </div>
+        </div>
+        <div class="right">
+            <form>
+                
+            </form>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
