Added footer on home page

--- a/main.html
+++ b/main.html
@@ -45,14 +45,12 @@
         </div>
     </div>
     <div class="label" id="lworks">
-        <!-- <br><br><br><br><br> -->
         <h1>works</h1>
     </div>
     <div class="sections" id="sworks">
        <h2>content</h2>
     </div>
     <div class="label" id="lcontact">
-        <!-- <br><br><br><br><br> -->
         <h1>contact</h1>
     </div>
     <div class="sections" id="scontact">
@@ -103,6 +101,10 @@
                 </table>
             </form>
         </div>
+    </div>
+    <div id="footer">
+        <br>
+        <p>© 2020 BIANCA MATIRA | ALL RIGHTS RESERVED.</p>
     </div>
     <script src="./script.js"></script>
 </body>
