--- a/main.html
+++ b/main.html
@@ -26,7 +26,6 @@
         </div>
     </div>
     <div class="label" id="labout">
-        <!-- <br><br><br><br><br> -->
         <h1>about</h1>
     </div>
     <div class="sections" id="sabout">
@@ -45,7 +44,15 @@
         </div>
     </div>
     <div class="label" id="lworks">
-        <h1>works</h1>
+        <!-- <div class="hovereffect">
+            <img class="img-responsive" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Effect 13</h2>
+                <p>
+                    <a href="#">LINK HERE</a>
+                </p>
+            </div>
+        </div> -->
     </div>
     <div class="sections" id="sworks">
        <h2>content</h2>
@@ -95,7 +102,7 @@
                     <tr>
                         <td></td>
                         <td>
-                            <input type="submit" value="Submit">
+                            <input type="submit" value="SUBMIT">
                         </td>
                     </tr>
                 </table>
