--- a/main.html
+++ b/main.html
@@ -44,18 +44,90 @@
         </div>
     </div>
     <div class="label" id="lworks">
-        <!-- <div class="hovereffect">
-            <img class="img-responsive" src="./images/prof.jpg" alt="">
-            <div class="overlay">
-                <h2>Effect 13</h2>
-                <p>
-                    <a href="#">LINK HERE</a>
-                </p>
-            </div>
-        </div> -->
+        <h1>works</h1>
     </div>
     <div class="sections" id="sworks">
-       <h2>content</h2>
+        <div class="item">
+            <img class="item-img" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Title<br><span>web</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img class="item-img" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Title<br><span>web</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img class="item-img" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Title<br><span>web</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img class="item-img" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Title<br><span>web</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img class="item-img" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Title<br><span>web</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img class="item-img" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Title<br><span>web</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+        <img class="item-img" src="./images/prof.jpg" alt="">
+        <div class="overlay">
+            <h2>Title<br><span>web</span></h2>
+            <p>
+                <a href="#"><i>more >> </i></a>
+            </p>
+        </div>
+        </div>
+        <div class="item">
+            <img class="item-img" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Title<br><span>web</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img class="item-img" src="./images/prof.jpg" alt="">
+            <div class="overlay">
+                <h2>Title<br><span>web</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
     </div>
     <div class="label" id="lcontact">
         <h1>contact</h1>
