Created back to top button

--- a/main.html
+++ b/main.html
@@ -11,8 +11,9 @@
     <title>BIANCA | A Portfolio Website</title>
 </head>
 <body>
+    <a href="#shome" id="back2top"><img src="./images/arrow.png"></a>
     <div id="navbar">
-        <a id="link1" href="#lhome"><img src="./images/bcm-logo.png"></a>
+        <a id="link1" href="#shome"><img src="./images/bcm-logo.png"></a>
         <a class="links" id="link2" href="#labout">ABOUT</a>
         <a class="links" id="link3" href="#lworks">WORKS</a>
         <a class="links" id="link4" href="#lcontact">CONTACT</a>
@@ -139,9 +140,9 @@
                 voluptatum.
             </p>
             <div class="socials">
-                <a href="#facebook"><img src="./images/sicon-fb.png"></a><a href="#instagram"><img
-                        src="./images/sicon-ig.png"></a><a href="#youtube"><img src="./images/sicon-yt.png"></a><a
-                    href="#linkedin"><img src="./images/sicon-in.png"></a>
+                <a target="_blank" href="https://www.facebook.com/bcmatira"><img target="_blank" src="./images/sicon-fb.png"></a><a href="https://www.instagram.com/_biancamatira"><img
+                        src="./images/sicon-ig.png"></a><a target="_blank" href="https://www.youtube.com/channel/UCIhVZlXEwBm_ctsWTMi8qDA"><img src="./images/sicon-yt.png"></a><a
+                    target="_blank" href="https://www.linkedin.com/in/biancacmatira"><img src="./images/sicon-in.png"></a>
             </div>
         </div>
         <div class="right">
