--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
     </div>
     <div class="sections" id="sworks">
         <div class="item">
-            <img class="item-img" src="./images/prof.jpg" alt="">
+            <img src="./images/works/sugarhiccups0.png" alt="">
             <div class="overlay">
                 <h2>Title<br><span>web</span></h2>
                 <p>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="item">
-            <img class="item-img" src="./images/prof.jpg" alt="">
+            <img src="./images/works/jenchateau0.jpg" alt="">
             <div class="overlay">
                 <h2>Title<br><span>web</span></h2>
                 <p>
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="item">
-            <img class="item-img" src="./images/prof.jpg" alt="">
+            <img src="./images/works/neptunes0.jpg" alt="">
             <div class="overlay">
                 <h2>Title<br><span>web</span></h2>
                 <p>
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div class="item">
-            <img class="item-img" src="./images/prof.jpg" alt="">
+            <img src="./images/works/ustphotowalk0.jpg" alt="">
             <div class="overlay">
                 <h2>Title<br><span>web</span></h2>
                 <p>
@@ -85,7 +85,7 @@
             </div>
         </div>
         <div class="item">
-            <img class="item-img" src="./images/prof.jpg" alt="">
+            <img src="./images/works/freeadlayouts0.jpg" alt="">
             <div class="overlay">
                 <h2>Title<br><span>web</span></h2>
                 <p>
