Home -back2top, -text, -form

--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="item">
-            <img class="item-img" src="./images/prof.jpg" alt="">
+            <img class="item-img" src="./images/works/bminfographic0.jpg" alt="">
             <div class="overlay">
                 <h2>Title<br><span>web</span></h2>
                 <p>
@@ -102,33 +102,9 @@
                 </p>
             </div>
         </div>
-        <div class="item">
-        <img class="item-img" src="./images/prof.jpg" alt="">
-        <div class="overlay">
-            <h2>Title<br><span>web</span></h2>
-            <p>
-                <a href="#"><i>more >> </i></a>
-            </p>
-        </div>
-        </div>
-        <div class="item">
-            <img class="item-img" src="./images/prof.jpg" alt="">
-            <div class="overlay">
-                <h2>Title<br><span>web</span></h2>
-                <p>
-                    <a href="#"><i>more >> </i></a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img class="item-img" src="./images/prof.jpg" alt="">
-            <div class="overlay">
-                <h2>Title<br><span>web</span></h2>
-                <p>
-                    <a href="#"><i>more >> </i></a>
-                </p>
-            </div>
-        </div>
+    </div>
+    <div id="mworks">
+        <a href="#moreworks">SEE ALL</a>
     </div>
     <div class="label" id="lcontact">
         <h1>contact</h1>
