--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="text">
                     <h4>my name is</h4>
                     <h2>Bianca</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius animi unde est. Molestiae sint ducimus laborum, dolorum
-                        cumque reiciendis corrupti dolor quibusdam consectetur placeat, facilis quidem perspiciatis vero sapiente
-                        voluptatum.
+                    <p>A graphic designer and a front-end development student based in Vancouver. With a somewhat strong background in digital
+                    illustration and bits of calligraphy and photography, my work includes brand identity, type design, art direction, and editorial layout. 
+                    <!-- <i>Plus eLearning development experience.</i><br> -->
                     </p>
             </div>
         </div>
@@ -49,54 +49,54 @@
     </div>
     <div class="sections" id="sworks">
         <div class="item">
-            <img src="./images/works/sugarhiccups0.png" alt="">
+            <img src="./images/works/sugarhiccups0.png" alt="Sugar Hiccups">
             <div class="overlay">
-                <h2>Title<br><span>web</span></h2>
+                <h2>Sugar Hiccups<br><span>web</span></h2>
                 <p>
                     <a href="#"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/jenchateau0.jpg" alt="">
+            <img src="./images/works/jenchateau0.jpg" alt="Jen Chateau">
             <div class="overlay">
-                <h2>Title<br><span>web</span></h2>
+                <h2>Jen Chateau<br><span>Photography</span></h2>
                 <p>
                     <a href="#"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/neptunes0.jpg" alt="">
+            <img src="./images/works/neptunes0.jpg" alt="Neptune's Milkshakes & Beyond">
             <div class="overlay">
-                <h2>Title<br><span>web</span></h2>
+                <h2>Neptune's Milkshakes & Beyond<br><span>branding</span></h2>
                 <p>
                     <a href="#"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/ustphotowalk0.jpg" alt="">
+            <img src="./images/works/ustphotowalk0.jpg" alt="University of Santo Tomas Photowalk">
             <div class="overlay">
-                <h2>Title<br><span>web</span></h2>
+                <h2>University of Santo Tomas Photowalk<br><span>photography</span></h2>
                 <p>
                     <a href="#"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/freeadlayouts0.jpg" alt="">
+            <img src="./images/works/freeadlayouts0.jpg" alt="Free Ad Layouts">
             <div class="overlay">
-                <h2>Title<br><span>web</span></h2>
+                <h2>Free Ad Layouts<br><span>editorial layout</span></h2>
                 <p>
                     <a href="#"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img class="item-img" src="./images/works/bminfographic0.jpg" alt="">
+            <img class="item-img" src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
             <div class="overlay">
-                <h2>Title<br><span>web</span></h2>
+                <h2>Bruno Mars Discography<br><span>infographic</span></h2>
                 <p>
                     <a href="#"><i>more >> </i></a>
                 </p>
@@ -111,12 +111,11 @@
     </div>
     <div class="sections" id="scontact">
         <div class="left">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius animi unde est. Molestiae sint ducimus laborum, dolorum
-                cumque reiciendis corrupti dolor quibusdam consectetur placeat, facilis quidem perspiciatis vero sapiente
-                voluptatum.
+            <p>Got a project we could brew together? <br><b>Shoot me a message!</b><br><br>
+                Also open for all other inquiries.. <br>and free airline tickets. ;)
             </p>
             <div class="socials">
-                <a target="_blank" href="https://www.facebook.com/bcmatira"><img target="_blank" src="./images/sicon-fb.png"></a><a href="https://www.instagram.com/_biancamatira"><img
+                <a target="_blank" href="https://www.facebook.com/bcmatira"><img src="./images/sicon-fb.png"></a><a href="https://www.instagram.com/_biancamatira" target="_blank"><img
                         src="./images/sicon-ig.png"></a><a target="_blank" href="https://www.youtube.com/channel/UCIhVZlXEwBm_ctsWTMi8qDA"><img src="./images/sicon-yt.png"></a><a
                     target="_blank" href="https://www.linkedin.com/in/biancacmatira"><img src="./images/sicon-in.png"></a>
             </div>
