Created initial works page, bug on js

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div id="mworks">
-        <a href="#moreworks">SEE ALL</a>
+        <a href="works.html">SEE ALL</a>
     </div>
     <div class="label" id="lcontact">
         <h1>contact</h1>
@@ -161,6 +161,6 @@
         <br>
         <p>© 2020 BIANCA MATIRA | ALL RIGHTS RESERVED.</p>
     </div>
-    <script src="./script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
