--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div class="item">
-            <img class="item-img" src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
+            <img src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
             <div class="overlay">
                 <h2>Bruno Mars Discography<br><span>infographic</span></h2>
                 <p>
@@ -161,6 +161,6 @@
         <br>
         <p>© 2020 BIANCA MATIRA | ALL RIGHTS RESERVED.</p>
     </div>
-    <script src="main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
