--- a/works.html
+++ b/works.html
@@ -14,9 +14,9 @@
     <a href="#shome" id="back2top"><img src="./images/arrow.png"></a>
     <div id="wnavbar">
         <a id="link1" href="index.html"><img src="./images/bcm-logo.png"></a>
-        <a class="links" id="link2" href="#labout">ABOUT</a>
+        <a class="links" id="link2" href="index.html#labout">ABOUT</a>
         <a class="links" id="link3" href="#lworks">WORKS</a>
-        <a class="links" id="link4" href="#lcontact">CONTACT</a>
+        <a class="links" id="link4" href="index.html#lcontact">CONTACT</a>
     </div>
 
     <div class="label" id="lworks">
@@ -60,6 +60,87 @@
             </div>
         </div>
         <div class="item">
+            <img src="./images/works/metrocompre0.jpg" alt="Metro Magazine Compre">
+            <div class="overlay">
+                <h2>Metro Magazine Compre<br><span>editorial layout</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/manilazoo0.jpg" alt="Manila Zoo Wayfinding Style Guide">
+            <div class="overlay">
+                <h2>Manila Zoo Wayfinding Style Guide<br><span>branding</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/vectorized0.png" alt="Vectorized">
+            <div class="overlay">
+                <h2>Vectorized<br><span>digital illustration</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/hfinfographic0.png" alt="Patikim, Pokie!">
+            <div class="overlay">
+                <h2>Patikim, Pokie!<br><span>digital illustration</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/sscompre0.jpg" alt="StarStudio Magazine Compre">
+            <div class="overlay">
+                <h2>StarStudio Magazine Compre<br><span>editorial layout</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/highspeed0.jpg" alt="High Speed">
+            <div class="overlay">
+                <h2>High Speed<br><span>photography</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/nsmsinfographic0.jpg" alt="Social Media Statistics">
+            <div class="overlay">
+                <h2>Social Media Statistics<br><span>infographic</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/earthhour0.jpg" alt="Earth Hour Interactive Poster">
+            <div class="overlay">
+                <h2>Earth Hour Interactive Poster<br><span>print design</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/ustphotowalk0.jpg" alt="University of Santo Tomas Photowalk">
+            <div class="overlay">
+                <h2>University of Santo Tomas Photowalk<br><span>photography</span></h2>
+                <p>
+                    <a href="#"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
             <img src="./images/works/freeadlayouts0.jpg" alt="Free Ad Layouts">
             <div class="overlay">
                 <h2>Free Ad Layouts<br><span>editorial layout</span></h2>
@@ -69,11 +150,11 @@
             </div>
         </div>
         <div class="item">
-            <img class="item-img" src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
+            <img src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
             <div class="overlay">
                 <h2>Bruno Mars Discography<br><span>infographic</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/bruno-mars-infographic.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
@@ -104,38 +185,13 @@
                 </p>
             </div>
         </div>
-        <div class="item">
-            <img src="./images/works/ustphotowalk0.jpg" alt="University of Santo Tomas Photowalk">
-            <div class="overlay">
-                <h2>University of Santo Tomas Photowalk<br><span>photography</span></h2>
-                <p>
-                    <a href="#"><i>more >> </i></a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img src="./images/works/freeadlayouts0.jpg" alt="Free Ad Layouts">
-            <div class="overlay">
-                <h2>Free Ad Layouts<br><span>editorial layout</span></h2>
-                <p>
-                    <a href="#"><i>more >> </i></a>
-                </p>
-            </div>
-        </div>
-        <div class="item">
-            <img class="item-img" src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
-            <div class="overlay">
-                <h2>Bruno Mars Discography<br><span>infographic</span></h2>
-                <p>
-                    <a href="#"><i>more >> </i></a>
-                </p>
-            </div>
-        </div>
+    
     </div>
     <div style="height: 50px;"></div>
     <div id="footer">
         <br>
         <p>© 2020 BIANCA MATIRA | ALL RIGHTS RESERVED.</p>
     </div>
+    <script src="./scripts/works.js"></script>
 </body>
 </html>
