--- a/works/bruno-mars-infographic.html
+++ b/works/bruno-mars-infographic.html
@@ -15,34 +15,32 @@
 <body>
     <a href="#shome" id="back2top"><img src="../images/arrow.png"></a>
     <div id="wnavbar">
-        <a id="link1" href="index.html"><img src="../images/bcm-logo.png"></a>
-        <a class="links" id="link2" href="index.html#labout">ABOUT</a>
-        <a class="links" id="link3" href="#lworks">WORKS</a>
-        <a class="links" id="link4" href="index.html#lcontact">CONTACT</a>
-    </div>
-
-    <div class="label" id="lworks">
-        <h1>works</h1>
+        <a id="link1" href="../index.html"><img src="../images/bcm-logo.png"></a>
+        <a class="links" id="link2" href="../index.html#labout">ABOUT</a>
+        <a class="links" id="link3" href="../works.html">WORKS</a>
+        <a class="links" id="link4" href="../index.html#lcontact">CONTACT</a>
     </div>
     <div class="icontent">
         <div class="imain">
-            <img src="../images/works/bminfographic1.jpeg">
-            <img src="../images/works/bminfographic2.jpeg">
-            <img src="../images/works/bminfographic3.jpeg">
-            <img src="../images/works/bminfographic4.jpeg">
-            <img src="../images/works/bminfographic5.jpeg">
-            <img src="../images/works/bminfographic6.jpeg">
+            <div class="imain_inner">
+                <img src="../images/works/bminfographic1.jpeg">
+                <img src="../images/works/bminfographic2.jpeg">
+                <img src="../images/works/bminfographic3.jpeg">
+                <img src="../images/works/bminfographic4.jpeg">
+                <img src="../images/works/bminfographic5.jpeg">
+                <img src="../images/works/bminfographic6.jpeg">
+            </div>
         </div>
         <div class="iside">
             <h1>Bruno Mars Discography</h1>
             <h2>Infographic</h2>
+            <br><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
                 at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
                 architecto ipsum assumenda magni obcaecati blanditiis facilis et!
             </p>
         </div>
     </div>
-    <div style="height: 50px;"></div>
     <div id="footer">
         <br>
         <p>© 2020 BIANCA MATIRA | ALL RIGHTS RESERVED.</p>
