First 6 individual work pages

--- a/works.html
+++ b/works.html
@@ -136,7 +136,7 @@
             <div class="overlay">
                 <h2>University of Santo Tomas Photowalk<br><span>photography</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/ust-photowalk.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
@@ -145,7 +145,7 @@
             <div class="overlay">
                 <h2>Free Ad Layouts<br><span>editorial layout</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/free-ad-layouts.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
@@ -154,16 +154,16 @@
             <div class="overlay">
                 <h2>Bruno Mars Discography<br><span>infographic</span></h2>
                 <p>
-                    <a href="./works/bruno-mars-infographic.html"><i>more >> </i></a>
+                    <a href="./works/bruno-mars-discography.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
             <img src="./images/works/sugarhiccups0.png" alt="Sugar Hiccups">
             <div class="overlay">
-                <h2>Sugar Hiccups<br><span>web</span></h2>
+                <h2>Sugar Hiccups<br><span>web design</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/sugar-hiccups.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
@@ -172,7 +172,7 @@
             <div class="overlay">
                 <h2>Jen Chateau<br><span>Photography</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/jen-chateau.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
@@ -181,7 +181,7 @@
             <div class="overlay">
                 <h2>Neptune's Milkshakes & Beyond<br><span>branding</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/neptunes-milkshakes-&-beyond.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
