--- a/works/neptunes-milkshakes-&-beyond.html
+++ b/works/neptunes-milkshakes-&-beyond.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,700,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico" />
-    <title>BIANCA | Works</title>
+    <title>BIANCA | Neptune's Milkshakes & Beyond</title>
 </head>
 
 <body>
@@ -23,17 +23,16 @@
     <div class="icontent">
         <div class="imain">
             <div class="imain_inner">
-                <img src="../images/works/bminfographic1.jpeg">
-                <img src="../images/works/bminfographic2.jpeg">
-                <img src="../images/works/bminfographic3.jpeg">
-                <img src="../images/works/bminfographic4.jpeg">
-                <img src="../images/works/bminfographic5.jpeg">
-                <img src="../images/works/bminfographic6.jpeg">
+                <img src="../images/works/neptunes1.jpeg">
+                <img src="../images/works/neptunes2.jpeg">
+                <img src="../images/works/neptunes3.jpeg">
+                <img src="../images/works/neptunes4.jpeg">
+                <img src="../images/works/neptunes5.jpeg">
             </div>
         </div>
         <div class="iside">
-            <h1>Bruno Mars Discography</h1>
-            <h2>Infographic</h2>
+            <h1>Neptune's Milkshakes & Beyond</h1>
+            <h2>Branding • Digital Marketing</h2>
             <br><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
                 at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
