--- a/works.html
+++ b/works.html
@@ -80,18 +80,18 @@
         <div class="item">
             <img src="./images/works/vectorized0.png" alt="Vectorized">
             <div class="overlay">
-                <h2>Vectorized<br><span>digital illustration</span></h2>
+                <h2>Vectorized Portraits<br><span>digital illustration</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/vectorized-portraits.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
             <img src="./images/works/hfinfographic0.png" alt="Patikim, Pokie!">
             <div class="overlay">
-                <h2>Patikim, Pokie!<br><span>digital illustration</span></h2>
+                <h2>10 Hunger Facts for 2014<br><span>infographic</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/10-hunger-facts-for-2014.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
@@ -100,7 +100,7 @@
             <div class="overlay">
                 <h2>StarStudio Magazine Compre<br><span>editorial layout</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/starstudio-magazine-compre.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
@@ -109,16 +109,16 @@
             <div class="overlay">
                 <h2>High Speed<br><span>photography</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/high-speed.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
             <img src="./images/works/nsmsinfographic0.jpg" alt="Social Media Statistics">
             <div class="overlay">
-                <h2>Social Media Statistics<br><span>infographic</span></h2>
+                <h2>New Social Media Statistics<br><span>infographic</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/new-social-media-statistics.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
@@ -127,7 +127,7 @@
             <div class="overlay">
                 <h2>Earth Hour Interactive Poster<br><span>print design</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/earth-hour-interactive-poster.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
