Fixed socials on home

--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
                 Also open for all other inquiries.. <br>and free airline tickets. ;)
             </p>
             <div class="socials">
-                <a target="_blank" href="https://www.facebook.com/bcmatira"><img src="./images/sicon-fb.png"></a><a href="https://www.instagram.com/_biancamatira" target="_blank"><img
-                        src="./images/sicon-ig.png"></a><a target="_blank" href="https://www.youtube.com/channel/UCIhVZlXEwBm_ctsWTMi8qDA"><img src="./images/sicon-yt.png"></a><a
-                    target="_blank" href="https://www.linkedin.com/in/biancacmatira"><img src="./images/sicon-in.png"></a>
+                <a target="_blank" href="https://www.linkedin.com/in/biancacmatira"><img src="./images/sicon-in.png"></a>
+                <a target="_blank" href="https://www.behance.net/biancacmatira"><img src="./images/sicon-be.png"></a>
+                <a target="_blank" href="https://github.com/biancacmatira"><img src="./images/sicon-gh.png"></a> 
+                <a target="_blank" href="https://www.instagram.com/_biancamatira"><img src="./images/sicon-ig.png"></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCIhVZlXEwBm_ctsWTMi8qDA"><img src="./images/sicon-yt.png"></a>
             </div>
         </div>
         <div class="right">
