--- a/works.html
+++ b/works.html
@@ -24,63 +24,81 @@
     </div>
     <div class="sections" id="sworks">
         <div class="item">
-            <img src="./images/works/sugarhiccups0.png" alt="Sugar Hiccups">
+            <img src="./images/works/rr-ems0.jpg" alt="Red Ribbon - Every Moment Sweeter">
             <div class="overlay">
-                <h2>Sugar Hiccups<br><span>web</span></h2>
+                <h2>Red Ribbon - Every Moment Sweeter<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/rr-ems-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/jenchateau0.jpg" alt="Jen Chateau">
+            <img src="./images/works/rc-cv0.jpg" alt="Rocket Concepts - Core Values">
             <div class="overlay">
-                <h2>Jen Chateau<br><span>Photography</span></h2>
+                <h2>Rocket Concepts - Core Values<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/rc-corevalues-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/neptunes0.jpg" alt="Neptune's Milkshakes & Beyond">
+            <img src="./images/works/rr-fm0.jpg" alt="Red Ribbon - Shop Floor Management">
             <div class="overlay">
-                <h2>Neptune's Milkshakes & Beyond<br><span>branding</span></h2>
+                <h2>Red Ribbon - Shop Floor Management<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/rr-sfm-cbt.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="./images/works/ustphotowalk0.jpg" alt="University of Santo Tomas Photowalk">
+            <img src="./images/works/jfc-tqa0.jpg" alt="JFC - Total Quality Assurance">
             <div class="overlay">
-                <h2>University of Santo Tomas Photowalk<br><span>photography</span></h2>
+                <h2>JFC - Total Quality Assurance<br><span>Digital Illustration</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/jfc-tqa-cbt.html"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/patikim0.png" alt="Patikim, Pokie - Contributions">
+            <div class="overlay">
+                <h2>Patikim, Pokie - Contributions<br><span>Digital Illustration</span></h2>
+                <p>
+                    <a href="./works/patikim-pokie-contributions.html"><i>more >> </i></a>
+                </p>
+            </div>
+        </div>
+        <div class="item">
+            <img src="./images/works/timy0.png" alt="Till I Met You - Contributions">
+            <div class="overlay">
+                <h2>Till I Met You - Contributions<br><span>Digital Illustration</span></h2>
+                <p>
+                    <a href="./works/timy-contributions.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
             <img src="./images/works/metrocompre0.jpg" alt="Metro Magazine Compre">
             <div class="overlay">
-                <h2>Metro Magazine Compre<br><span>editorial layout</span></h2>
+                <h2>Metro Magazine Compre<br><span>Editorial Layout</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/metro-magazine-compre.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
             <img src="./images/works/manilazoo0.jpg" alt="Manila Zoo Wayfinding Style Guide">
             <div class="overlay">
-                <h2>Manila Zoo Wayfinding Style Guide<br><span>branding</span></h2>
+                <h2>Manila Zoo Wayfinding Style Guide<br><span>Branding</span></h2>
                 <p>
-                    <a href="#"><i>more >> </i></a>
+                    <a href="./works/manila-zoo-wayfinding.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
         <div class="item">
             <img src="./images/works/vectorized0.png" alt="Vectorized">
             <div class="overlay">
-                <h2>Vectorized Portraits<br><span>digital illustration</span></h2>
+                <h2>Vectorized Portraits<br><span>Digital Illustration</span></h2>
                 <p>
                     <a href="./works/vectorized-portraits.html"><i>more >> </i></a>
                 </p>
@@ -89,7 +107,7 @@
         <div class="item">
             <img src="./images/works/hfinfographic0.png" alt="Patikim, Pokie!">
             <div class="overlay">
-                <h2>10 Hunger Facts for 2014<br><span>infographic</span></h2>
+                <h2>10 Hunger Facts for 2014<br><span>Infographic</span></h2>
                 <p>
                     <a href="./works/10-hunger-facts-for-2014.html"><i>more >> </i></a>
                 </p>
@@ -98,7 +116,7 @@
         <div class="item">
             <img src="./images/works/sscompre0.jpg" alt="StarStudio Magazine Compre">
             <div class="overlay">
-                <h2>StarStudio Magazine Compre<br><span>editorial layout</span></h2>
+                <h2>StarStudio Magazine Compre<br><span>Editorial Layout</span></h2>
                 <p>
                     <a href="./works/starstudio-magazine-compre.html"><i>more >> </i></a>
                 </p>
@@ -107,7 +125,7 @@
         <div class="item">
             <img src="./images/works/highspeed0.jpg" alt="High Speed">
             <div class="overlay">
-                <h2>High Speed<br><span>photography</span></h2>
+                <h2>High Speed<br><span>Photography</span></h2>
                 <p>
                     <a href="./works/high-speed.html"><i>more >> </i></a>
                 </p>
@@ -116,7 +134,7 @@
         <div class="item">
             <img src="./images/works/nsmsinfographic0.jpg" alt="Social Media Statistics">
             <div class="overlay">
-                <h2>New Social Media Statistics<br><span>infographic</span></h2>
+                <h2>New Social Media Statistics<br><span>Infographic</span></h2>
                 <p>
                     <a href="./works/new-social-media-statistics.html"><i>more >> </i></a>
                 </p>
@@ -125,7 +143,7 @@
         <div class="item">
             <img src="./images/works/earthhour0.jpg" alt="Earth Hour Interactive Poster">
             <div class="overlay">
-                <h2>Earth Hour Interactive Poster<br><span>print design</span></h2>
+                <h2>Earth Hour Interactive Poster<br><span>Print Design</span></h2>
                 <p>
                     <a href="./works/earth-hour-interactive-poster.html"><i>more >> </i></a>
                 </p>
@@ -134,39 +152,39 @@
         <div class="item">
             <img src="./images/works/ustphotowalk0.jpg" alt="University of Santo Tomas Photowalk">
             <div class="overlay">
-                <h2>University of Santo Tomas Photowalk<br><span>photography</span></h2>
+                <h2>University of Santo Tomas Photowalk<br><span>Photography</span></h2>
                 <p>
                     <a href="./works/ust-photowalk.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
-        <div class="item">
+        <!-- <div class="item">
             <img src="./images/works/freeadlayouts0.jpg" alt="Free Ad Layouts">
             <div class="overlay">
-                <h2>Free Ad Layouts<br><span>editorial layout</span></h2>
+                <h2>Free Ad Layouts<br><span>Editorial Layout</span></h2>
                 <p>
                     <a href="./works/free-ad-layouts.html"><i>more >> </i></a>
                 </p>
             </div>
-        </div>
+        </div> -->
         <div class="item">
             <img src="./images/works/bminfographic0.jpg" alt="Bruno Mars Discography">
             <div class="overlay">
-                <h2>Bruno Mars Discography<br><span>infographic</span></h2>
+                <h2>Bruno Mars Discography<br><span>Infographic</span></h2>
                 <p>
                     <a href="./works/bruno-mars-discography.html"><i>more >> </i></a>
                 </p>
             </div>
         </div>
-        <div class="item">
+        <!-- <div class="item">
             <img src="./images/works/sugarhiccups0.png" alt="Sugar Hiccups">
             <div class="overlay">
-                <h2>Sugar Hiccups<br><span>web design</span></h2>
+                <h2>Sugar Hiccups<br><span>Web Design</span></h2>
                 <p>
                     <a href="./works/sugar-hiccups.html"><i>more >> </i></a>
                 </p>
             </div>
-        </div>
+        </div> -->
         <div class="item">
             <img src="./images/works/jenchateau0.jpg" alt="Jen Chateau">
             <div class="overlay">
@@ -179,7 +197,7 @@
         <div class="item">
             <img src="./images/works/neptunes0.jpg" alt="Neptune's Milkshakes & Beyond">
             <div class="overlay">
-                <h2>Neptune's Milkshakes & Beyond<br><span>branding</span></h2>
+                <h2>Neptune's Milkshakes & Beyond<br><span>Branding</span></h2>
                 <p>
                     <a href="./works/neptunes-milkshakes-&-beyond.html"><i>more >> </i></a>
                 </p>
