Done with descriptions on individual pages

--- a/works/10-hunger-facts-for-2014.html
+++ b/works/10-hunger-facts-for-2014.html
@@ -23,7 +23,7 @@
     <div class="icontent">
         <div class="imain">
             <div class="imain_inner">
-                <img src="../images/works/hfinfographic1.jpeg">
+                <!-- <img src="../images/works/hfinfographic1.jpeg"> -->
                 <img src="../images/works/hfinfographic2.png">
                 <img src="../images/works/hfinfographic4.png">
                 <img src="../images/works/hfinfographic5.png">
@@ -34,13 +34,17 @@
             </div>
         </div>
         <div class="iside">
-            <h1>10 Hunger Facts for 2014</h1>
-            <h2>Infographic</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>10 Hunger Facts for 2014</h1>
+                <h2>Infographic</h2>
+                <br><br>
+                <p>A school project for the Information Design course in iAcademy
+                in the Philippines. The task was to make an infographic about the
+                provided article with the same title <b><i>10 Hunger Facts For 2014
+                </i></b>. Project preview includes chopped up infographic.
+                <i>Sources cited</i>.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
