--- a/works/bruno-mars-discography.html
+++ b/works/bruno-mars-discography.html
@@ -23,7 +23,7 @@
     <div class="icontent">
         <div class="imain">
             <div class="imain_inner">
-                <img src="../images/works/bminfographic1.jpeg">
+                <!-- <img src="../images/works/bminfographic1.jpeg"> -->
                 <img src="../images/works/bminfographic2.jpeg">
                 <img src="../images/works/bminfographic3.jpeg">
                 <img src="../images/works/bminfographic4.jpeg">
@@ -32,13 +32,16 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Bruno Mars Discography</h1>
-            <h2>Infographic</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Bruno Mars Discography</h1>
+                <h2>Infographic</h2>
+                <br><br>
+                <p>A school project for the Information Design course in iAcademy
+                in the Philippines. The task was to make an infographic about the
+                discography of the chosen artist, <b><i>Bruno Mars</i></b>.
+                Project preview includes chopped up infographic. <i>Sources cited</i>.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
