--- a/works/free-ad-layouts.html
+++ b/works/free-ad-layouts.html
@@ -34,13 +34,17 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Free Ad Layouts</h1>
-            <h2>Editorial Layouts</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Free Ad Layouts</h1>
+                <h2>Editorial Layouts</h2>
+                <br><br>
+                <p>A collection of projects for ABS-CBN Publishing Inc. The series
+                    is made up of published free ad layouts, of various sizes (quarter and half page)
+                    for the different magazines of the company, including, but not limited to,
+                    <b><i>StarStudio, WorkingMom, Metro,</i></b> and <b><i>Metro Society</i></b>.
+                    Project preview includes raw images of one quarter page ad and seven half pagers.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
