--- a/works/manila-zoo-wayfinding.html
+++ b/works/manila-zoo-wayfinding.html
@@ -38,13 +38,16 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Manila Zoo Wayfinding Style Guide</h1>
-            <h2>Branding</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Manila Zoo Wayfinding Style Guide</h1>
+                <h2>Branding</h2>
+                <br><br>
+                <p>A school project for the Information Design course in iAcademy
+                in the Philippines. The task was to rebrand and make a wayfinding
+                style guide of a local zoo. Project preview includes proposed
+                new logo, icons, typeface, color schemes, map, signages and mock ups.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
