--- a/works/neptunes-milkshakes-&-beyond.html
+++ b/works/neptunes-milkshakes-&-beyond.html
@@ -31,13 +31,17 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Neptune's Milkshakes & Beyond</h1>
-            <h2>Branding • Digital Marketing</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Neptune's Milkshakes & Beyond</h1>
+                <h2>Branding • Digital Marketing</h2>
+                <br><br>
+                <p>A school project for the Brand Management course in iAcademy
+                in the Philippines. The task was to rebrand an existing milkshake shop,
+                named <b><i>Neptune's Milkshakes & Beyond</i></b> and make mock up posters,
+                while still following the brand's theme. Project preview includes mock up
+                introductory, institutional, teaser and seasonal posters.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
