--- a/works/patikim-pokie-contributions.html
+++ b/works/patikim-pokie-contributions.html
@@ -34,13 +34,17 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Patikim, Pokie - Contributions</h1>
-            <h2>digital illustration</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Patikim, Pokie<br><span>Contributions</span></h1>
+                <h2>digital illustration</h2>
+                <br><br>
+                <p>A freelance project for ABS-CBN Publishing, Inc. - Books Department.
+                    Illustration contributions for a cookbook of a local celebrity (comedian),
+                    <b><i>Pokwang</i></b>. Project preview includes scanned cover and pages
+                    with the tiny couple and the raw image of proposed cover illustration --
+                    which ended up in the table of contents.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
