--- a/works/timy-contributions.html
+++ b/works/timy-contributions.html
@@ -34,13 +34,20 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Till I Met You - Contributions</h1>
-            <h2>Digital Illustration</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+           <div class="iside_inner">
+                <h1>Till I Met You<br><span>Contributions</span></h1>
+                <h2>Digital Illustration</h2>
+                <br><br>
+                <p>A freelance project for ABS-CBN Publishing, Inc. - Books Department.
+                    Illustration contributions for a wedding planner, for a local TV show
+                    from another subsidiary of the ABS-CBN Corporation, with the same title,
+                    <b><i>Till I Met You</i></b>, topbilled by <b><i>James Reid</i></b> and
+                    <b><i>Nadine Lustre</i></b>, better known together as <b><i>Jadine</i></b>.
+                    Project preview includes scanned cover and pages with various illustrations
+                    and the raw images of the said illustrations, which include: the stars of
+                    the show, flowers, groom's attire and other wedding stuff.
+                </p>
+           </div>
         </div>
     </div>
     <div id="footer">
