--- a/works/ust-photowalk.html
+++ b/works/ust-photowalk.html
@@ -35,13 +35,17 @@
             </div>
         </div>
         <div class="iside">
-            <h1>University of Santo Tomas (UST) Photowalk</h1>
-            <h2>Photography</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>University of Santo Tomas (UST) Photowalk</h1>
+                <h2>Photography</h2>
+                <br><br>
+                <p>A school project for the Digital Photography course in iAcademy
+                    in the Philippines. The series features the Pontifical and Royal
+                    <b><i>University of Santo Tomas</i></b> (est. 1611), and 
+                    <b><i>Jennelyn Castillejo</i></b>, project partner. The series
+                    showcases different rules of compositions in photography.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
