--- a/works/earth-hour-interactive-poster.html
+++ b/works/earth-hour-interactive-poster.html
@@ -30,13 +30,18 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Earth Hour Interactive Poster</h1>
-            <h2>Print Design</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Earth Hour Interactive Poster</h1>
+                <h2>Print Design</h2>
+                <br><br>
+                <p>A school project for the Print Communication course in iAcademy
+                in the Philippines. The task was to make an event poster using Silkscreen
+                Method. The bonus interactive feature, glow-in-the-dark paint, matched the
+                chosen event, <b><i>Earth Hour 2014</i></b>. Project preview includes
+                expected before (lights on) and after (lights off) look of the poster, and
+                the actual before and after photos.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
