--- a/works/high-speed.html
+++ b/works/high-speed.html
@@ -31,13 +31,15 @@
             </div>
         </div>
         <div class="iside">
-            <h1>High Speed</h1>
-            <h2>Photography</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>High Speed</h1>
+                <h2>Photography</h2>
+                <br><br>
+                <p>A school project for the Basic Photography course in iAcademy
+                    in the Philippines. The series showcases different techniques
+                    and uses of high speed photography.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
