--- a/works/jen-chateau.html
+++ b/works/jen-chateau.html
@@ -34,13 +34,15 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Jen Chateau</h1>
-            <h2>Photography</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Jen Chateau</h1>
+                <h2>Photography</h2>
+                <br><br>
+                <p>A school project for the Digital Photography course in iAcademy
+                    in the Philippines. The series features portraiture of the model,
+                    and the project partner, <b><i>Jennelyn Castillejo</i></b>.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
