--- a/works/new-social-media-statistics.html
+++ b/works/new-social-media-statistics.html
@@ -23,7 +23,7 @@
     <div class="icontent">
         <div class="imain">
             <div class="imain_inner">
-                <img src="../images/works/nsmsinfographic1.png">
+                <!-- <img src="../images/works/nsmsinfographic1.png"> -->
                 <img src="../images/works/nsmsinfographic2.jpeg">
                 <img src="../images/works/nsmsinfographic3.jpeg">
                 <img src="../images/works/nsmsinfographic4.jpeg">
@@ -33,13 +33,17 @@
             </div>
         </div>
         <div class="iside">
-            <h1>New Social Media Statistics</h1>
-            <h2>Infographic</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>New Social Media Statistics</h1>
+                <h2>Infographic</h2>
+                <br><br>
+                <p>A school project for the Information Design course in iAcademy
+                in the Philippines. The task was to make an infographic about the
+                provided article with the same title <b><i>New Social Media Statistics
+                You Need to Know</i></b>. Project preview includes chopped up
+                infographic. <i>Sources cited</i>.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
