--- a/works/rc-corevalues-cbt.html
+++ b/works/rc-corevalues-cbt.html
@@ -34,13 +34,16 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Rocket Concepts - Core Values</h1>
-            <h2>Digital Illustration • eLearning Development</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Rocket Concepts - Core Values</h1>
+                <h2>Digital Illustration • eLearning Development</h2>
+                <br><br>
+                <p>A Rocket Concepts internal project for website demo purposes. A gamified
+                computer-based training for the employees and potential clients, complete with voice
+                overs, background music and animations. Project preview does not include
+                the training itself as it is confidential. Only some pages of the storyboard are shown.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
