--- a/works/starstudio-magazine-compre.html
+++ b/works/starstudio-magazine-compre.html
@@ -32,13 +32,18 @@
             </div>
         </div>
         <div class="iside">
-            <h1>StarStudio Magazine Compre</h1>
-            <h2>Editorial Layout</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>StarStudio Magazine Compre</h1>
+                <h2>Editorial Layout</h2>
+                <br><br>
+                <p>An internal project for ABS-CBN Publishing Inc. during internship.
+                    A comprehensive feature editorial layout + advertorial layout that followed
+                    the pattern of the entertainment magazine of the company,
+                    <b><i>StarStudio Magazine</i></b>. This was not printed as it was only
+                    an activity for the interns. Project preview includes cover, a 6-page (3 spreads)
+                    feature editorial, an advertorial spread and the mock ups for the said pages.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
