--- a/works/sugar-hiccups.html
+++ b/works/sugar-hiccups.html
@@ -34,13 +34,19 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Sugar Hiccups</h1>
-            <h2>Web Design</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Sugar Hiccups</h1>
+                <h2>Web Design</h2>
+                <br><br>
+                <p>A school project for the Web Programming course in iAcademy
+                in the Philippines. The task was to make an e-commerce website
+                using the 960 grid system in Adobe Dreamweaver. 
+                <!-- <b><i>Sugar Hiccups Online Cupcake Store Website</i></b> was a made up store,
+                photos of the products were from <a href="www.cupcakesbysonja.com">Cupcakes by Sonja</a>. -->
+                Project preview includes screengrabs of all the pages, plus
+                lightbox feature of the products page.
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
