--- a/works/vectorized-portraits.html
+++ b/works/vectorized-portraits.html
@@ -30,13 +30,14 @@
             </div>
         </div>
         <div class="iside">
-            <h1>Vectorized Portraits</h1>
-            <h2>Digital Illustration</h2>
-            <br><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque et ipsam sint,
-                at maxime laborum. Placeat mollitia iure adipisci. Nam exercitationem qui
-                architecto ipsum assumenda magni obcaecati blanditiis facilis et!
-            </p>
+            <div class="iside_inner">
+                <h1>Vectorized Portraits</h1>
+                <h2>Digital Illustration</h2>
+                <br><br>
+                <p>A personal project featuring an unfinished series of vectorized portraits of
+                    family members and sunbursts. 
+                </p>
+            </div>
         </div>
     </div>
     <div id="footer">
